Update language toolchain to JDK 17 (REL-802)
This completes the project upgrade to JDK 17. It does the following:

* Updates our `build.gradle` to choose the JDK 17 toolchain. It will now throw an error during the build if one tries to use JDK 11.
* Makes use of some new Java 17 language features, mostly as a proof of concept (though I think I like all of the new ways better). So far, this only includes some syntactic sugar things, like simplifying `if (x instanceof Y) { var y = (Y) x; /* do stuff with y */ ... }` into `if (x instanceof Y y) { /* do stuff with y */ ... }` and updating `.collect(Collectors.toList())` calls on `Stream`s to just `.toList()`. There are some more exotic features like `switch` expressions and sealed classes that this does _not_ introduce.

The easiest way for developers to upgrade is probably to modify their `.zshrc` so that their `JAVA_HOME` points to a Java 17 JDK.