@@ -99,8 +99,7 @@ public class RelationalServer implements Closeable {
     @Override
     public String toString() {
         return "listening=" + this.grpcServer.getListenSockets() +
-                ", services=" + this.grpcServer.getServices().stream().map(m -> m.getServiceDescriptor().getName())
-                .collect(Collectors.toList()) +
+                ", services=" + this.grpcServer.getServices().stream().map(m -> m.getServiceDescriptor().getName()).toList() +
                 ", httpPort=" + this.httpPort;
     }
 
